--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title:             Clean Blog
-email:             your-email@example.com
+email:             clxkdk10@naver.com
 description:       A Blog Theme by Start Bootstrap
 author:            Start Bootstrap
 baseurl:           "/startbootstrap-clean-blog-jekyll"
-url:               "http://blackrockdigital.github.io"
+url:               "http://clxkdk10.github.io"
 
 # Social Profiles
 twitter_username:  SBootstrap
