--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:             clxkdk10@naver.com
 description:       A Blog Theme by Start Bootstrap
 author:            Start Bootstrap
 baseurl:           "http://clxkdk10.github.io"
-url:               "http://clxkdk10.github.io"
+url:               ""
 
 # Social Profiles
 twitter_username:  SBootstrap
