--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:             Clean Blog
 email:             clxkdk10@naver.com
 description:       A Blog Theme by Start Bootstrap
 author:            Start Bootstrap
-baseurl:           "http://clxkdk10.github.io"
+baseurl:           ""
 url:               ""
 
 # Social Profiles
